Add activity handlers for all controller endpoints Generalize the producer service so that only one is used for all types of avro objects Relaxed schema compatibility in the confluent center Made all the id's to be of type long
